<resources>
    <string name="app_name">SpinOff</string>

    <string name="placeholder_text" translatable="false">Placeholder</string>

    //Login screen//
    <string name="login_employee">Jeg er en medarbejder</string>
    <string name="login_company">Log ind som firma</string>
    <string name="login_logodesc">Logo til login screen</string>
    <string name="login_employee_noinput">Indtast venligst både mail og password.</string>
    <string name="login_employee_failed">Anonymt login mislykkedes.\nTjek din internetforbindelse.</string>
    <string name="login_employee_success">Loggede ind som anonym medarbejder</string>
    <string name="login_textview">&#169; 2018 SpinOff &amp; DTU Compute. Alle rettigheder forbeholdes.</string>
    <string name="login_appinfotext">Denne applikation er udviklet i samarbejde mellem Gruppe 23 fra DTU Compute og SpinOff Aps.\n\nEfterår 2018.\n\nAppversion: 1.1c &#169; 2018 Alle rettigheder forbeholdes.</string>
    <string name="login_appinfodtudesc">Logo til DTU</string>

    //Company login screen//
    <string name="company_login_intro">Firma log ind</string>
    <string name="company_login_buttontext">Log ind</string>
    <string name="company_login_help">Glemt kodeord?</string>
    <string name="company_loginCVRText">Firma mail</string>
    <string name="company_loginPassText">Firma kodeord</string>
    <string name="company_login_forgot_password">Trykkede på \'Glemt kodeord\'</string>
    <string name="company_login_login_failed">Login mislykkedes. Prøv igen.</string>
    <string name="company_login_login_success">Loggede ind på bruger</string>
    <string name="title_activity_main_employee_ui" translatable="false">MainEmployeeUI</string>
    <string name="company_login_test_companytext">Test firma</string>

    //General//
    <string name="general_no_internet">Intet internet detekteret. Tjek din netforbindelse</string>
    <string name="general_employee">Anonym medarbejder</string>
    <string name="general_error_reading">Datafejl</string>



    //Employee main UI screen//
    <string name="employee_ui_feedback">Feedback</string>
    <string name="employee_ui_meeting">Møder</string>
    <string name="employee_ui_more">Mere</string>
    <string name="employee_ui_statistics">Statistik</string>
    <string name="employee_ui_testmeetingtext">Test møde</string>

    //Graph views fragments//
    <string name="graphview_title_average">Gennemsnit af spørgsmål</string>
    <string name="graphview_title_q1">Svar fra 1. spørgsmål</string>
    <string name="graphview_title_q2">Svar fra 2. spørgsmål</string>
    <string name="graphview_title_q3">Svar fra 3. spørgsmål</string>
    <string name="grapview_graphxlabel">Spørgsmålsnummer</string>
    <string name="grapview_graphylabel">Antal point</string>


    //Employee Meeting Fragment//
    <string name="employee_meeting_fragmenttext">Indtast møde PIN</string>
    <string name="employee_meeting_fragmentedittext">Møde PIN</string>
    <string name="employee_meeting_fragment_searchbutton">Søg efter møde</string>
    <string name="employee_meeting_fragment_createbutton">Lav nyt møde</string>

    //Employee More Fragment//
    <string name="employee_more_settingsbuttontext">Indstillinger</string>
    <string name="employee_more_termsofservicebuttontext">Regler og vilkår</string>
    <string name="employee_more_aboutus">Om os</string>
    <string name="employee_more_logout">Log ud</string>
    <string name="employee_more_toptitletext">Du er logget ind som</string>
    <string name="employee_more_loggedoutcompanytext">Loggede ud fra bruger</string>
    <string name="employee_more_loggedoutemployeetext">Loggede ud fra anonym medarbejder</string>
    <string name="employee_more_loggedouterror">Log ud mislykkedes. Ingen bruger registreret</string>


    //Welcomepager screens//
    <string name="welcomepager_welcome_title">Velkommen</string>
    <string name="welcomepager_welcome_intro">Vi hos SpinOff vil gøre en forskel, både for dig som medarbejder, og for dig som mødeleder.\n\nFeedback og åben kritik af møders struktur og indhold er vigtigt for at møder optimeres.\n\nVi tilbyder en let og enkelt platform til organisationer og deres medarbejdere til at afhjælpe dette.</string>
    <string name="welcomepager_meeting_title">Møde respons.</string>
    <string name="welcomepager_meeting_intro">Respons og feedback på møder og arrangementer er ofte lange, besværlige og akavede.\n\nDet vil vi gøre op med, med en platform til din smartphone.\n\nFeedbackprocessen skal være hurtig, nem og ikke sluge for meget tid.</string>
    <string name="welcomepager_anonymous_title">Anonymitet og sikkerhed.</string>
    <string name="welcomepager_anonymous_intro">Alle svar registreres anonymt, og kan ikke spores tilbage til netop din person.\n\nAnonymt feedback er oftere mere ærligt, end et signeret responsskema.\n\nHverken virksomheden eller mødelederen kan se hvem der svarer hvad.</string>
    <string name="welcomepager_feedback_title">Resultat og formål.</string>
    <string name="welcomepager_feedback_intro">Vores platform visualiserer mødedeltageres indtryk af mødet til virksomheden og mødelederen.\n\nDet gør det muligt for dem at fokusere på problemområder, og lave ændringer til nye - og bedre - møder.</string>
    <string name="welcomepager_button_next">Næste</string>
    <string name="welcomepager_button_skip">Spring over</string>
    <string name="welcomepager_button_finish">Afslut intro</string>

    //CreateMeeting fragment//
    <string name="createmeeting_title">Nyt møde</string>
    <string name="createmeeting_intro">Du kan nu indtaste de oplysninger vedr. mødet. Der vil automatisk blive generet en PIN-kode, som bruges til at tilgå mødet.</string>
    <string name="createMeetingTitleHint">Mødetitel</string>
    <string name="createMeetingDescHint">Mødebeskrivelse</string>
    <string name="createMeetingCountHint">Antal deltagere</string>
    <string name="createMeetingButtonText">Opret nyt møde</string>
    <string name="createMeetingLinkText">Hej alle. Jeg har lavet et møde via SpinOff, med PIN-koden:</string>
    <string name="createMeetingButtonTextNewText">Tryk på knappen for at kopiere et link til mødet</string>
    <string name="createMeetingCreationConfirmation">Møde oprettet. Pinkoden til mødet er:</string>
    <string name="createMeetingCreationToast">Pinkoden er:</string>
    <string name="createMeetingLinkCopy">Link kopieret</string>
    <string name="createMeetingCreated">Mødet er oprettet. </string>


    //CreateFeedback fragment//
    <string name="createfeedback_submit_button_text">+ Tilføj feedback</string>
    <string name="createfeedback_toast">Feedback tilføjet til møde:</string>


    //FeedbackGraphs fragment//
    <string name="feedbackgraphs_maintitle">Mødetitel</string>
    <string name="feedbackgraphs_meetingtitle">Mødetitel</string>
    <string name="feedbackgraphs_meetingdescription">Mødebeskrivelse</string>
    <string name="feedbackgraphs_meetingpeoplecount">Antal tilmeldte</string>
    <string name="feedbackgraphs_meetinganswercount">Antal svar</string>
    <string name="feedbackgraphs_comments">Kommentarer</string>

    <string name="snackbar_email_pass_empty">Indtast venligst både mail og password</string>
    <string name="snackbar_forgot_pass">Trykkede på Glemt kodeord</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="employee_meeting_fragmentmeetingerror">Fejl. Møde ikke fundet</string>
    <string name="employee_meeting_fragmentmeetingsuccess">Møde fundet</string>


</resources>
