<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context=".employeeUI.MeetingFragment">


    <TextView
        android:id="@+id/textViewEmployeeMeetingText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="@font/futurabook"
        android:text="@string/employee_meeting_fragmenttext"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryWhite"
        android:textSize="28sp"
        app:layout_constraintTop_toBottomOf="@id/imageViewLogoEmployeeMeeting" />

    <EditText
        android:id="@+id/editTextEmployeeMeetingEnter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:drawableStart="@drawable/ic_peoplemeeting"
        android:ems="6"
        android:fontFamily="@font/futurabook"
        android:hint="@string/employee_meeting_fragmentedittext"
        android:inputType="number"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryWhite"
        android:textColorHint="@color/colorPrimaryWhite"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewEmployeeMeetingText" />

    <ImageView
        android:id="@+id/imageViewLogoEmployeeMeeting"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/login_logodesc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.35"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/spinoffsmall" />

    <Button
        android:id="@+id/buttonSearchMeeting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/button_logingreen"
        android:fontFamily="@font/futurabook"
        android:text="@string/employee_meeting_fragment_searchbutton"
        android:textAllCaps="false"
        android:textColor="@color/colorPrimaryWhite"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBoxTestMeeting" />


    <Button
        android:id="@+id/buttonCreateMeeting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/button_loginblue"
        android:fontFamily="@font/futurabook"
        android:text="@string/employee_meeting_fragment_createbutton"
        android:textAllCaps="false"
        android:textColor="@color/colorPrimaryWhite"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonSearchMeeting" />


    <CheckBox
        android:id="@+id/checkBoxTestMeeting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:buttonTint="@color/colorPrimary"
        android:fontFamily="@font/futurabook"
        android:text="Test møde"
        android:textColor="@color/colorPrimaryWhite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextEmployeeMeetingEnter" />


</android.support.constraint.ConstraintLayout>