<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:clickable="true"
    android:focusable="true">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarGraphs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ToolbarTheme"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textViewGraphsMainTitle"
            style="@android:style/TextAppearance.Material.Widget.ActionBar.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/placeholder_text" />
    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:id="@+id/textViewGraphsMeetingTitle"
        style="@style/AppTheme.SubHeadline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/feedbackgraphs_meetingtitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbarGraphs" />

    <TextView
        android:id="@+id/textViewGraphsMeetingTitleContent"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="16dp"
        android:maxLines="1"
        android:text="@string/feedbackgraphs_meetingtitle"
        app:layout_constraintEnd_toStartOf="@+id/circleProgressAnswerCount"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewGraphsMeetingTitle" />

    <TextView
        android:id="@+id/textViewGraphsMeetingDesc"
        style="@style/AppTheme.SubHeadline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:gravity="center"
        android:text="@string/feedbackgraphs_meetingdescription"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewGraphsMeetingTitleContent" />

    <TextView
        android:id="@+id/textViewGraphsMeetingDescContent"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="16dp"
        android:maxLines="3"
        android:text="@string/feedbackgraphs_meetingdescription"
        app:layout_constraintEnd_toStartOf="@+id/circleProgressAnswerCount"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewGraphsMeetingDesc"
        app:layout_constraintWidth_percent="0.5" />

    <TextView
        android:id="@+id/textViewGraphsMeetingComm"
        style="@style/AppTheme.SubHeadline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:text="@string/feedbackgraphs_comments"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewGraphsMeetingDescContent" />

    <TextView
        android:id="@+id/textViewGraphsCircProgressCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:maxLines="2"
        android:text="@string/feedbackgraphs_meetinganswercount"
        app:layout_constraintBottom_toBottomOf="@id/circleProgressAnswerCount"
        app:layout_constraintEnd_toEndOf="@id/circleProgressAnswerCount"
        app:layout_constraintStart_toStartOf="@id/circleProgressAnswerCount"
        app:layout_constraintTop_toTopOf="@id/circleProgressAnswerCount" />

    <com.mikhaellopez.circularprogressbar.CircularProgressBar
        android:id="@+id/circleProgressAnswerCount"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:cpb_background_progressbar_color="@color/colorPrimaryWhite"
        app:cpb_background_progressbar_width="10dp"
        app:cpb_progressbar_color="@color/colorPrimary"
        app:cpb_progressbar_width="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbarGraphs" />

    <ListView
        android:id="@+id/listViewComments"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewGraphsMeetingComm" />


    <androidx.viewpager.widget.ViewPager
        android:id="@+id/viewPagerGraphs"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@+id/graphDotsLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/listViewComments" />

    <LinearLayout
        android:id="@+id/graphDotsLayout"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:layout_marginBottom="16dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>